<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/wave_header2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:mwhWaves="MultiWave"
        app:mwhProgress="1"
        android:scaleY="-1"
        app:mwhStartColor="#00ff00"
        app:mwhCloseColor="#000"
        android:layout_marginTop="590dp"
        tools:ignore="DuplicateIds,MissingClass">
    </com.scwang.wave.MultiWaveHeader>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp" />

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/wave_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:mwhCloseColor="#000"
        app:mwhProgress="1"
        android:scaleY="1"
        app:mwhStartColor="#00ff00"
        app:mwhWaves="MultiWave"
        tools:ignore="MissingClass">
    </com.scwang.wave.MultiWaveHeader>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:layout_marginTop="350dp"
        android:text="@string/username"
        android:layout_marginStart="50dp"
        android:textStyle="bold"
        android:textColor="#660066"
        android:layout_marginLeft="50dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/username"
        android:ems="15"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:maxLines="1"
        android:backgroundTint="#660066"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:autofillHints="@string/enter_username"
        android:layout_marginLeft="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:layout_marginTop="435dp"
        android:text="@string/password"
        android:layout_marginStart="50dp"
        android:textStyle="bold"
        android:textColor="#660066"
        android:layout_marginLeft="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/password"
        android:ems="15"
        android:layout_marginStart="50dp"
        android:layout_marginTop="455dp"
        android:maxLines="1"
        android:backgroundTint="#660066"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints="@string/enter_password"
        android:layout_marginLeft="50dp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/boxmodel"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#ff5050"
        android:textSize="20sp"
        android:layout_marginLeft="90dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/boxmodel"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#ff5050"
        android:textSize="20sp"
        android:layout_marginLeft="230dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="@string/tagline"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="680dp"
        android:layout_marginLeft="40dp" />

</RelativeLayout>