<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/imgid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/kajal" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/kajal"
            android:layout_marginLeft="100dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/kajaldesc"
            android:layout_marginLeft="100dp" />

        <Button
            android:id="@+id/cart"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="10sp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="130dp"
            android:text="@string/cart"
            android:layout_marginLeft="130dp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/wishlist"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="55dp"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginStart="250dp"
            android:text="@string/wishlist"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="250dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>